--- a/public/bower.json
+++ b/public/bower.json
@@ -16,6 +16,8 @@
   ],
   "dependencies": {
     "bootstrap-material-design": "^0.5.10",
-    "fotorama": "^4.6.4"
+    "fotorama": "^4.6.4",
+    "bootbox.js": "bootbox#^4.4.0",
+    "dropzone": "^4.3.0"
   }
 }
