--- a/public/bower.json
+++ b/public/bower.json
@@ -18,6 +18,8 @@
     "bootstrap-material-design": "^0.5.10",
     "fotorama": "^4.6.4",
     "bootbox.js": "bootbox#^4.4.0",
-    "dropzone": "^4.3.0"
+    "dropzone": "^4.3.0",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.42",
+    "moment": "momentjs#^2.14.1"
   }
 }
