--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /node_modules
 /public/storage
 /public/build
+/public/css
+/public/js
 Homestead.yaml
 Homestead.json
 /resources/assets/components
